# pdf-lay

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/pdf/: SKILL.md
.claude/skills/pdf-qa/: SKILL.md
.claude/skills/pdf-summary/: SKILL.md
.claude/skills/pdf-to-llm/: SKILL.md
.codex/prompts/: pdf-qa.md  pdf-summary.md  pdf-to-llm.md  pdf.md
.devin/: skills.md
.github/workflows/: build.yml  ci.yml  github-release.yml  release.yml
crates/pdf-lay/: Cargo.toml
crates/pdf-lay-cli/: Cargo.toml
crates/pdf-lay-cli/src/: main.rs
crates/pdf-lay-core/: Cargo.toml
crates/pdf-lay-core/src/: config.rs  error.rs  lib.rs  pipeline.rs  test_helpers.rs
crates/pdf-lay-core/src/extract/: coordinate.rs  image_extractor.rs  mod.rs  ocr.rs  pdf_reader.rs  span_builder.rs
crates/pdf-lay-core/src/figure/: caption_detector.rs  image_matcher.rs  mod.rs  vector_figure.rs
crates/pdf-lay-core/src/layout/: column_detector.rs  line_reconstructor.rs  mod.rs
crates/pdf-lay-core/src/math/: converter.rs  detector.rs  mod.rs  symbol_map.rs
crates/pdf-lay-core/src/output/: chunker.rs  content_ir.rs  json.rs  markdown.rs  mod.rs  render_core.rs  tokenizer.rs
crates/pdf-lay-core/src/selector/: llm_text.rs  mod.rs  selector.rs  toc.rs
crates/pdf-lay-core/src/structure/: block_classifier.rs  block_grouper.rs  header_detector.rs  metadata.rs  mod.rs  numbering.rs  reading_order.rs  section_builder.rs
crates/pdf-lay-core/src/table/: detector.rs  grid_builder.rs  mod.rs  text_converter.rs
crates/pdf-lay-core/src/types/: document.rs  geometry.rs  layout.rs  mod.rs  numbering.rs  path.rs  text.rs
crates/pdf-lay/src/: lib.rs
crates/pdf-lay/tests/: e2e_api.rs
crates/pdflay-python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/pdflay-python/src/: lib.rs
docs/: phase2-implementation-plan.md
docs/arch/: 01_SPECIFICATION.md  02_DESIGN.md
docs/develop/: overview.md  task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_16.md  task_17.md  task_18.md  task_19.md  task_20.md  task_21.md
docs/refactor/: 00_REVIEW_POLICY.md  REFACTORING_PROPOSAL.md  phase0_foundation.md  phase1_sections.md  phase2_llm_output.md  phase3_skills.md  phase4_extraction.md  phase4_findings.md  phase5_findings.md
scripts/: install.sh
skills/: pdf  pdf-qa  pdf-summary  pdf-to-llm
tests/fixtures/: README.md
tests/integration/: smoke_test.rs
