[workspace]
members = [
    "crates/pdf-lay-core",
    "crates/pdf-lay",
    "crates/pdf-lay-cli",
    "crates/pdflay-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0-rc.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/sonoh5n/pdf-lay"

[workspace.dependencies]
# Core dependencies — all crates pin versions here
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
thiserror   = "2"
log         = "0.4"
env_logger  = "0.11"
image       = "0.25"
rayon       = "1"

# Python bindings
# `generate-import-lib` avoids Windows abi3 wheel builds depending on a
# preinstalled `python3.lib` during CI packaging.
pyo3        = { version = "0.23", features = ["extension-module", "abi3-py39", "generate-import-lib"] }

# CLI
clap        = { version = "4", features = ["derive"] }

# Test/dev
tempfile    = "3"

pdf_oxide = "0.3.8"
pathdiff  = "0.2"
