[package]
name = "pdf-lay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "pdf-lay"
path = "src/main.rs"

[dependencies]
pdf-lay = { path = "../pdf-lay" }
clap = { workspace = true, features = ["derive"] }
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# Forwards to pdf-lay's (and, transitively, pdf-lay-core's) opt-in real BPE
# tokenizer seam so `chunks --tokenizer <model-or-path>` can load a real
# tokenizer. Not part of the default feature set — see
# crates/pdf-lay-core/Cargo.toml for why.
real-tokenizer = ["pdf-lay/real-tokenizer"]

# Forwards to pdf-lay's (and, transitively, pdf-lay-core's) opt-in OCR seam
# (P4-2) so the `--ocr` flag can actually shell out to `tesseract`. Not part
# of the default feature set. Without it, `--ocr` still parses and is
# honored as a `Config.ocr.enabled` value, but analysis reports
# `PageTextMissing` warnings for scanned pages instead of attempting OCR
# (graceful degradation — see `crates/pdf-lay-core/src/extract/ocr.rs`).
ocr = ["pdf-lay/ocr"]
