[package]
name = "pdf-lay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false   # internal crate, not published to crates.io

[dependencies]
serde.workspace      = true
serde_json.workspace = true
regex.workspace      = true
thiserror.workspace  = true
log.workspace        = true
image.workspace      = true
rayon.workspace      = true
pdf_oxide.workspace  = true
pathdiff.workspace   = true
tempfile.workspace   = true
tokenizers = { workspace = true, optional = true }

[features]
# Opt-in real BPE tokenizer seam (`output::tokenizer::HfTokenizer`) for
# `Chunker::with_tokenizer`. Not part of the default feature set: the
# `tokenizers` crate and its transitive dependencies (onig, hf-hub, ureq,
# etc.) are heavy and unnecessary for the default HeuristicTokenizer path.
real-tokenizer = ["dep:tokenizers"]

[dev-dependencies]
