[package]
name = "pdf-lay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDF Layout Analysis for Academic Papers"

[dependencies]
pdf-lay-core = { path = "../pdf-lay-core" }

[features]
# Forwards to pdf-lay-core's opt-in real BPE tokenizer seam; see
# crates/pdf-lay-core/Cargo.toml for details. Not part of the default
# feature set.
real-tokenizer = ["pdf-lay-core/real-tokenizer"]

# Forwards to pdf-lay-core's opt-in OCR seam (P4-2); see
# crates/pdf-lay-core/Cargo.toml for details. Not part of the default
# feature set.
ocr = ["pdf-lay-core/ocr"]

[dev-dependencies]
pdf-lay-core = { path = "../pdf-lay-core" }
serde_json = { workspace = true }

[[test]]
name = "integration"
path = "../../tests/integration/smoke_test.rs"
