[package]
name = "pdflay-python"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "pdflay"
crate-type = ["cdylib"]

[dependencies]
pdf-lay-core = { path = "../pdf-lay-core" }
pyo3.workspace = true
serde_json.workspace = true

[features]
# Forwards to pdf-lay-core's opt-in OCR seam (P4-2); see
# crates/pdf-lay-core/Cargo.toml for details. Not part of the default
# feature set.
ocr = ["pdf-lay-core/ocr"]
