[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdflay"
dynamic = ["version"]
requires-python = ">=3.9"
description = "PDF Layout Analysis for Academic Papers"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pdflay"
