[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdflay"
dynamic = ["version"]
requires-python = ">=3.9"
description = "PDF Layout Analysis for Academic Papers"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
keywords = ["pdf", "layout", "ocr", "llm", "pyo3"]

[project.urls]
Homepage = "https://github.com/sonoh5n/pdf-lay"
Repository = "https://github.com/sonoh5n/pdf-lay"
Issues = "https://github.com/sonoh5n/pdf-lay/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pdflay"
